# where-was-eye

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  DOCKER.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
examples/: README.md  basic_usage.py  educational_demo.py  http_api.py
src/where_was_eye/: __init__.py  agent.py  server.py  timeline_db.py
tests/: __init__.py  conftest.py  test_timeline_db.py
